Fix horizontal scroll overflow

--- a/components/horizontal-scroll/horizontal-scroll.module.scss
+++ b/components/horizontal-scroll/horizontal-scroll.module.scss
@@ -3,10 +3,11 @@
   flex-wrap: nowrap;
   flex-direction: row;
   overflow-x: auto;
+  align-items: stretch;
+  height: 100vh;
 
   & > * {
     flex: 0 0 100%;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
